--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -6,6 +6,9 @@ LABEL io.k8s.description="A basic Apache HTTP Server child image, uses ONBUILD" 
       io.openshift.expose-services="8080:http" \
       io.openshift.tags="apache, httpd"
 
+RUN yum -y install rh-python36 && \
+    yum clean all
+
 RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf && \
     chgrp -R 0 /var/log/httpd /var/run/httpd && \
     chmod -R g=u /var/log/httpd /var/run/httpd
