--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -6,7 +6,9 @@ LABEL io.k8s.description="A basic Apache HTTP Server child image, uses ONBUILD" 
       io.openshift.expose-services="8080:http" \
       io.openshift.tags="apache, httpd"
 
-RUN yum -y install rh-python36 && \
+RUN subscription-manager repos --enable rhel-7-server-optional-rpms --enable rhel-server-rhscl-7-rpms && \
+    yum -y install @development && \
+    yum -y install rh-python36 && \
     yum clean all
 
 RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf && \
