--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -6,8 +6,7 @@ LABEL io.k8s.description="A basic Apache HTTP Server child image, uses ONBUILD" 
       io.openshift.expose-services="8080:http" \
       io.openshift.tags="apache, httpd"
 
-RUN yum -y install epel-release && \
-    yum -y install python-pip && \
+RUN yum -y install --enablerepo="epel" python-pip && \
     yum clean all
 
 RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf && \
