--- a/hello-java/Dockerfile
+++ b/hello-java/Dockerfile
@@ -17,6 +17,8 @@ ADD   https://github.com/RedHatTraining/DO288-apps/releases/download/OCP-4.1-1/h
 
 COPY  run-app.sh /opt/app-root/bin/
 
+COPY hola.py /opt/app-root/bin
+
 RUN   chown -R 0 /opt/app-root && \
       chmod -R g=u /opt/app-root
 
